linking issues to TFS

--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -1,1 +1,2 @@
 serenity.test.root = org.serenitybdd.demo
+serenity.issue.tracker.url = https://tfs.thales-systems.ca/tfs/DRDC/JI2STC_Dev/_workitems/edit/{0}
