--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
 							<sources>
 								<source>${project.basedir}/src/test/java2</source>
 								<source>${project.basedir}/src/test/java3</source>
+								<source>${project.basedir}/src/test/java4</source>
 							</sources>
 						</configuration>
 					</execution>
